; ModuleID = '/home/carl/AnghaBench/micropython/ports/javascript/extr_main.c_mp_js_init.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/javascript/extr_main.c_mp_js_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stack_top = common dso_local global i8* null, align 8
@mp_sys_path = common dso_local global i32 0, align 4
@MP_QSTR_ = common dso_local global i32 0, align 4
@mp_sys_argv = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_js_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = bitcast i32* %3 to i8*
  store i8* %4, i8** @stack_top, align 8
  %5 = call i32 (...) @mp_init()
  %6 = load i32, i32* @mp_sys_path, align 4
  %7 = call i32 @mp_obj_list_init(i32 %6, i32 0)
  %8 = load i32, i32* @mp_sys_path, align 4
  %9 = load i32, i32* @MP_QSTR_, align 4
  %10 = call i32 @MP_OBJ_NEW_QSTR(i32 %9)
  %11 = call i32 @mp_obj_list_append(i32 %8, i32 %10)
  %12 = load i32, i32* @mp_sys_argv, align 4
  %13 = call i32 @mp_obj_list_init(i32 %12, i32 0)
  ret void
}

declare dso_local i32 @mp_init(...) #1

declare dso_local i32 @mp_obj_list_init(i32, i32) #1

declare dso_local i32 @mp_obj_list_append(i32, i32) #1

declare dso_local i32 @MP_OBJ_NEW_QSTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
